@@ -25,6 +25,10 @@ Ce type de comportement est à la base des [Algorithme_de_colonies_de_fourmis](h
      <img src="https://github.com/EmmanuelADAM/coursJavaAvance/blob/master/TP/images/demoFourmis.png" alt=""> 
 </center>
 
+*NB. Le code utilise JavaFX. Il vous faut donc posséder la librairie téléchargeable [ici](https://gluonhq.com/products/javafx/) et ajouter le répertoire menant à '''javafx-sdk/lib''' dans les propriétés de votre projet.
+De plus, pour lancer l'application, il vous faut préciser dans les options de la machine virtuelle Java (JVM) les chemins d'accès.*
+  - *Exemple : --module-path MONREPERTOIRE/javafx-sdk/lib --add-modules=javafx.controls,javafx.fxml*
+
 ----
 ## Composition de l'application
 
@@ -83,10 +87,11 @@ A vous de programmer le ramassage de nourriture, le retour au nid et le dépôt 
 
 ### A créer
 1. ajouter un menu contenant le l'item (configuration)
-  - Cet item affiche une fenêtre réalisée en FXML
+  - Cet item affiche une fenêtre réalisée en FXML (cf. les explication sur FXML [ici](https://github.com/EmmanuelADAM/coursJavaAvance/tree/master/fxml) et le code de fxmlExemple.
   - Cette fenêtre affiche deux glisseurs : pour régler la vitesse de dégradation (évaporation) et la dillution
 2. ajouter une gestion d'événement combinée : un clic sur la scene avec la touche 'Control' appuyée ajoute une petite zone de danger
 3. La zone de danger émet une odeur répulsive, les fourmis refusent d'y aller si l'odeur de danger dépasse un seuil... 
+4. Maintenant, un clic combiné avec touche ``Shift``  ajoute un prédateur qui erre dans l'environnement. Il emet une phéromone de danger et les fourmis chervhent à l'éviter tout en poursuivant leurs tâches si possible.. 
 
 
 -----
